# S5-S6

Maths/TP1/: R5.A.12-TP1-ex1-deviner.ipynb  R5.A.12-TP1-ex2-TSP.ipynb  R5.A.12-TP1.ipynb
Maths/TP1/.ipynb_checkpoints/: R5.A.12-TP1-ex1-deviner-checkpoint.ipynb
Maths/TP2/: BERTOLINI-Garice_TP2.ipynb  R5.A.12-TP2-1-IntroPandas.ipynb  R5.A.12-TP2-2-MethodesClassifications.ipynb  TP2_ex1_sujet.ipynb  TP2_ex2_sujet.ipynb  TP2_ex3_sujet.ipynb  cah-python.ipynb  kmeans-python.ipynb  swiss-bank-notes.csv
Maths/TP2/.ipynb_checkpoints/: R5.A.12-TP2-1-IntroPandas-checkpoint.ipynb  R5.A.12-TP2-2-MethodesClassifications-checkpoint.ipynb  R5.A12-TP2-3-ClassificationsAFaire-checkpoint.ipynb  TP2_ex1_sujet-checkpoint.ipynb  TP2_ex2_sujet-checkpoint.ipynb  cah-python-checkpoint.ipynb  kmeans-python-checkpoint.ipynb
Maths/TP3/: BERTOLINI-Garice_TP3.ipynb  hotel-de-ville.pgm  lena_bruit.pgm  port.pgm
Maths/TP4/: BERTOLINI-Garice_TP4.ipynb  coins.pgm
OpenGL/: .gitignore  CMakeLists.txt
OpenGL/src/: CMakeLists.txt
OpenGL/src/glengine/: CMakeLists.txt
OpenGL/src/glengine/doc/: CMakeLists.txt  mainpage.md
OpenGL/src/glengine/include/glengine/: Logger.hpp  ObjLoader.hpp  Renderer.hpp  Shader.hpp  Window.hpp  glengine.hpp  orbitalCamera.hpp
OpenGL/src/glengine/src/: ObjLoader.cpp  Renderer.cpp  Shader.cpp  Window.cpp  glengine.cpp  orbitalCamera.cpp
Optimisation/TP2/: SAT.md  SAT.py
Optimisation/TP2/public_cpp/: README.md  gmon.out  main  main.cpp  original_main.cpp
Optimisation/TP2/public_py/: main.py
Optimisation/TP3/: .gitignore
Optimisation/TP3/ind/: main.cpp  (+1 more)
(+13 files in other folders)
